Removing overflow bugs

--- a/projects/cultivator/design/index.css
+++ b/projects/cultivator/design/index.css
@@ -75,9 +75,6 @@
 
 
 
-
-
-
 ::moz-placeholder {
 	color: #545454;
 }
@@ -130,6 +127,7 @@ body {
 	color: #ffffff;
 	background: #404844;
 	font-family: 'museo-sans-300';
+	overflow: hidden;
 }
 
 menu {
